task 5: Refactor JsonWebSocketServer http://github.com/cubeworld/WebSocketServer/issues/issue/5